[project]
name = "synthex"
version = "0.1.0"
description = "Neural schematic primitives for agent memory"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Mark", email = "mark@example.com" }
]
keywords = ["agent", "memory", "cognitive-architecture", "llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "sqlalchemy>=2.0",
    "httpx>=0.25",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "pyright>=1.1",
]

[project.scripts]
synthex = "synthex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
